# fhir2dicom4ortho

./: .bumpversion.cfg  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASING.md  docker-compose.yml  dot-env  pyproject.toml  requirements.txt  tasks.py
fhir2dicom4ortho/: __init__.py  args_cache.py  entry_points.py  fhir_api.py  task_store.py  tasks.py  utils.py
ig/input/resources/: StructureDefinition-ortho-imaging-bundle.json
test/: __init__.py  env-dev  fhir2dicom4ortho.Bundle.json  test_cli.py  test_e2e.py  test_fhir2dicom4ortho.py
test/data/: fhir2dicom4ortho.Bundle.json  instances_bundle.json
